@@ -17,10 +17,10 @@ $LOAD_PATH.unshift(File.dirname(__FILE__))
 $LOAD_PATH.unshift(File.join(File.dirname(__FILE__), '..', 'lib'))
 require 'jeni'
 require 'rspec'
-require 'rspec/autorun'
+
 
 RSpec.configure do |config|
-  config.color_enabled = true
+  config.color = true
   config.formatter = :doc
 end
 
